--- a/MiLocationYMapasCompose/gradle/libs.versions.toml
+++ b/MiLocationYMapasCompose/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ mapsComposeUtils = "4.3.3"
 androidMapsUtils = "3.8.2"
 maps = "3.1.0-beta"
 appcompatVersion = "1.6.1"
+lifecycleViewmodelCompose = "2.7.0"
 
 
 [libraries]
@@ -47,6 +48,7 @@ maps-compose-utils = { group = "com.google.maps.android", name = "maps-compose-u
 android-maps-utils = { group = "com.google.maps.android", name = "android-maps-utils", version.ref = "androidMapsUtils" }
 maps = { group = "com.google.android.libraries.maps", name = "maps", version.ref = "maps" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompatVersion" }
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
